<resources>
    <string name="app_name">Green Guard</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_pass"><u> Forgot Password? </u></string>
    <string name="password_validation">* Must be at least 8 characters</string>
    <string name="sign_up">SIGN UP</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="invalid_email">Invalid email! Required format : example@example.com</string>
    <string name="empty_email">Email cannot be empty</string>
    <string name="empty_username">Username cannot be empty</string>
    <string name="empty_password">Password cannot be empty</string>

    <string name="temperature">Temperature°C</string>
    <string name="humidity">Humidity</string>
    <string name="co2">CO2</string>
    <string name="light">Light</string>
    <string name="one_hour">1 H</string>
    <string name="one_day">1 D</string>
    <string name="one_week">1 W</string>
    <string name="one_month">1 M</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_a_greenhouse">Select a greenhouse</string>
    <string name="unit_temperature">%1$f °C</string>
    <string name="unit_CO2">%1$f ppm</string>
    <!-- TODO: Check if percentage sign works as expected when escaped -->
    <string name="unit_humidity">%1$f %%</string>
    <!-- TODO: Check if integer formatting works with o -->
    <string name="unit_light">%1$o lux</string>
    <string name="select_plant_profile">Select plant profile</string>
    <string name="remove">Remove</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="delete_greenhouse">Are you sure you want to delete this greenhouse?</string>
    <string name="delete_plant_profile">Are you sure you want to delete this plant profile?</string>
    <string name="profile">Profile</string>
    <string name="name">Name:</string>
    <string name="email_adress">Email:</string>
    <string name="passwordEdit">Password:</string>
    <string name="repeat_password">Repeat\npassword:</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="update_info">Update info</string>
    <string name="delete_account">Delete Account</string>
    <string name="deleteAccountMessage">Are you sure you want to delete your account? This action cannot be undone.</string>
    <string name="plant_profile_name">Plant profile name</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="please_provide_your_email_address_to_reset_your_password">Please provide your email address to reset your password</string>
    <string name="next">Next</string>
    <string name="new_password">New Password</string>
    <string name="save">Save</string>
    <string name="new_credentials">New Credentials</string>
    <string name="new_credentials_details">New credentials details</string>
    <string name="delete_greenhouse_message"> Deleting this greenhouse will delete all the measurements associated with this greenhouse .Are you sure you want to delete this greenhouse?</string>
    <string name="delete_profile_message"></string>
    <string name="add_plant_profile">Add Plant Profile</string>
    <string name="optimal_environment">Optimal environment</string>
    <string name="carbon_dioxide">Carbon dioxide</string>
    <string name="threshold_values">Threshold values</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="add">Add</string>
    <string name="temperature_no_c">Temperature</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout"> Log out</string>
    <string name="update">Update</string>
    <string name="update_profile_information">Update Profile Information</string>
    <string name="plant_profile">Plant Profile</string>
    <string name="profile_name">Profile Name</string>
    <string name="description">Description</string>
    <string name="what_is_so_cool_about_this_plant">What is so cool about this plant...</string>
    <string name="edit_plant_profile">Edit Plant Profile</string>
    <string name="edit">edit</string>
    <string name="greenhouses">Greenhouses</string>
    <string name="plan_profiles">Plant Profiles</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout"> Log out</string>
    <string name="update">Update</string>
    <string name="update_profile_information">Update Profile Information</string>
</resources>