<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.measurement.MeasurementFragment">

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/lineChart"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_marginTop="180dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.835" />

    <RadioGroup

        android:id="@+id/radioGroup"
        android:layout_width="261dp"
        android:layout_height="48dp"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/lineChart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/temperature_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/radio_selector"
            android:button="@android:color/transparent"
            android:elevation="4dp"
            android:padding="5dp"
            android:text="@string/temperature"
            android:textAlignment="center"
            android:textColor="@drawable/text_color" />

        <RadioButton
            android:id="@+id/humidity_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/radio_selector"
            android:button="@android:color/transparent"
            android:elevation="4dp"

            android:padding="5dp"
            android:text="@string/humidity"
            android:textAlignment="center"
            android:textColor="@drawable/text_color" />

        <RadioButton
            android:id="@+id/co2_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/radio_selector"
            android:button="@android:color/transparent"
            android:elevation="4dp"
            android:padding="5dp"
            android:text="@string/co2"
            android:textAlignment="center"
            android:textColor="@drawable/text_color" />

        <RadioButton
            android:id="@+id/light_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/radio_selector"
            android:button="@android:color/transparent"
            android:elevation="4dp"
            android:padding="5dp"
            android:text="@string/light"
            android:textAlignment="center"
            android:textColor="@drawable/text_color" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/timeRadioGroup"
        android:layout_width="192dp"
        android:layout_height="34dp"
        android:orientation="horizontal"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/lineChart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup">

        <RadioButton
            android:id="@+id/last_hour_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/radio_selector"
            android:button="@android:color/transparent"
            android:elevation="4dp"
            android:padding="5dp"
            android:text="@string/one_hour"
            android:textAlignment="center"
            android:textColor="@drawable/text_color" />

        <RadioButton
            android:id="@+id/last_day_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/radio_selector"
            android:button="@android:color/transparent"
            android:elevation="4dp"
            android:padding="5dp"
            android:text="@string/one_day"
            android:textAlignment="center"
            android:textColor="@drawable/text_color" />

        <RadioButton
            android:id="@+id/last_week_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/radio_selector"
            android:button="@android:color/transparent"
            android:elevation="4dp"
            android:padding="5dp"
            android:text="@string/one_week"
            android:textAlignment="center"
            android:textColor="@drawable/text_color" />

        <RadioButton
            android:id="@+id/last_month_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/radio_selector"
            android:button="@android:color/transparent"
            android:elevation="4dp"
            android:padding="5dp"
            android:text="@string/one_month"
            android:textAlignment="center"
            android:textColor="@drawable/text_color" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>