<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="30dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:src="@drawable/update_password" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/helvetica_bold_family"
            android:gravity="center"
            android:text="@string/new_credentials"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/palette_black"
            android:textSize="40sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/helvetica_regular_family"
            android:gravity="center"
            android:text="@string/new_credentials_details"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/palette_black"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/edittext_bg"
            android:hint="@string/new_password"
            app:startIconDrawable="@drawable/password_icon"
            app:endIconMode="password_toggle"

            >



            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:background="@drawable/edittext_bg"

                android:layout_height="wrap_content"
                android:inputType="textPassword"/>


        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_bg"
            android:layout_marginTop="10dp"

            android:hint="@string/confirm_password"
            app:startIconDrawable="@drawable/password_icon"
            app:endIconMode="password_toggle"

            >



            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:background="@drawable/edittext_bg"

                android:layout_height="wrap_content"
                android:inputType="textPassword"/>


        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:background="@drawable/btn_bg"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple_200"
            android:text="@string/save"
            android:layout_marginTop="20dp"/>



    </LinearLayout>

</ScrollView>