<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:padding="5dp"
            android:src="@drawable/forget_password" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/helvetica_bold_family"
            android:gravity="center"
            android:text="@string/forgot_password"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/palette_black"
            android:textSize="40sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/helvetica_regular_family"
            android:gravity="center"
            android:text="@string/please_provide_your_email_address_to_reset_your_password"
            android:textAlignment="center"
            android:textSize="18sp" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/forget_email"
            android:background="@drawable/edittext_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:hint="@string/email"
            android:textColorHint="@color/black"

            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/email_icon"
            app:startIconTint="@color/black">


            <com.google.android.material.textfield.TextInputEditText
                android:background="@drawable/edittext_bg"

                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/nextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/purple_200"
            android:text="@string/next"
            android:background="@drawable/btn_bg"

            />


    </LinearLayout>

</ScrollView>